Fix overflow bug on cards CSS (#9723)

--- a/app/assets/stylesheets/components/_physical_cards.scss
+++ b/app/assets/stylesheets/components/_physical_cards.scss
@@ -255,6 +255,9 @@
 
 .stripe-card__personalization-image {
   height: 40px;
+  width: 100px;
+  object-position: center;
+  object-fit: contain;
   position: absolute;
   right: 0;
 }
